[gd_scene load_steps=20 format=3 uid="uid://cyxb6jh7o5skw"]

[ext_resource type="Script" path="res://menu/projects/actions/progress_panel/progress_panel.gd" id="1_tg8ej"]
[ext_resource type="PackedScene" uid="uid://n3lfb6rm53uc" path="res://menu/projects/actions/progress_panel/labelled_progress_bar.tscn" id="2_ttfj7"]
[ext_resource type="Texture2D" uid="uid://lvahg3gwen1x" path="res://menu/projects/actions/animation/walk.png" id="2_txkbk"]
[ext_resource type="Texture2D" uid="uid://d0q61ycpt3chw" path="res://menu/projects/actions/animation/index.png" id="2_utgpn"]
[ext_resource type="Texture2D" uid="uid://b5yay8fq0bxs7" path="res://menu/projects/actions/animation/roller_bottom.png" id="5_2gvrb"]
[ext_resource type="Texture2D" uid="uid://2bsjpj6u0vtf" path="res://menu/projects/actions/animation/auggy.png" id="5_tokjm"]
[ext_resource type="Texture2D" uid="uid://b4aorwpd4utvt" path="res://menu/projects/actions/animation/roller_top.png" id="6_xsr7q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu2ph"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rn4k5"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_rfh4t"]
font_size = 10

[sub_resource type="Animation" id="Animation_q6778"]
resource_name = "walk"
length = 1.33334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_txkbk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666666, 0.75, 0.833333, 0.916666, 1, 1.08333, 1.16667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_vjh4j"]
resource_name = "index"
length = 2.5
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_utgpn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.33333, 1.41667, 1.5, 1.58333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpo5u"]
_data = {
&"walk": SubResource("Animation_q6778"),
&"index": SubResource("Animation_vjh4j")
}

[sub_resource type="GDScript" id="GDScript_2foev"]
resource_name = "AugVisibilityScript"
script/source = "extends Sprite2D

@onready var roller = $\"..\"

func _ready():
	roller.visibility_changed.connect(func():
		if roller.visible:
			visible = randi_range(0, 50) == 1
	)
"

[sub_resource type="Animation" id="Animation_nes0b"]
resource_name = "bounce"
length = 1.33334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ghj7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blxam"]
_data = {
&"bounce": SubResource("Animation_nes0b"),
&"RESET": SubResource("Animation_ghj7q")
}

[sub_resource type="Animation" id="Animation_1hdb2"]
resource_name = "roll"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bottom:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mko62"]
_data = {
&"roll": SubResource("Animation_1hdb2")
}

[node name="ProgressPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 133.0
offset_top = 49.0
offset_right = -133.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qu2ph")
script = ExtResource("1_tg8ej")

[node name="InfoLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 1.0
anchor_bottom = 0.496
offset_left = 16.0
offset_top = -0.210007
offset_right = -13.0
offset_bottom = 0.119995
grow_horizontal = 2
grow_vertical = 2
text = "Doing task..."
label_settings = SubResource("LabelSettings_rn4k5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="TaskLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.596
offset_left = 8.0
offset_top = 27.0
offset_right = -10.0
offset_bottom = 0.119995
grow_horizontal = 2
grow_vertical = 2
text = "Nodes_18446744069414587421_SurfaceAlignmentProvider.bin"
label_settings = SubResource("LabelSettings_rfh4t")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="LabelledProgressBar" parent="." instance=ExtResource("2_ttfj7")]
layout_mode = 1
anchor_bottom = 0.525
offset_left = 98.0
offset_top = 0.249969
offset_right = -98.0
offset_bottom = -0.250031

[node name="AnimationContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.497
anchor_top = 0.408
anchor_right = 0.497
anchor_bottom = 0.408
offset_left = -0.34201
offset_top = -0.240005
offset_right = -0.34201
offset_bottom = -0.240005

[node name="Petri" type="Control" parent="AnimationContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -69.0
offset_right = -11.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="AnimationContainer/Petri"]
scale = Vector2(0.365942, 0.365942)
texture = ExtResource("2_utgpn")
hframes = 5
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationContainer/Petri"]
libraries = {
&"": SubResource("AnimationLibrary_mpo5u")
}

[node name="Roller" type="Control" parent="AnimationContainer"]
anchors_preset = 0
offset_left = 121.0
offset_top = -13.0
offset_right = 121.0
offset_bottom = -13.0

[node name="Auggy" type="Sprite2D" parent="AnimationContainer/Roller"]
position = Vector2(-15, -41)
scale = Vector2(0.366, 0.366)
texture = ExtResource("5_tokjm")
hframes = 4
vframes = 4
frame = 1
script = SubResource("GDScript_2foev")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationContainer/Roller/Auggy"]
libraries = {
&"": SubResource("AnimationLibrary_blxam")
}
autoplay = "bounce"

[node name="Bottom" type="Sprite2D" parent="AnimationContainer/Roller"]
scale = Vector2(0.366, 0.366)
texture = ExtResource("5_2gvrb")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationContainer/Roller"]
libraries = {
&"": SubResource("AnimationLibrary_mko62")
}
autoplay = "roll"

[node name="Top" type="Sprite2D" parent="AnimationContainer/Roller"]
position = Vector2(-14, -31)
scale = Vector2(0.366, 0.366)
texture = ExtResource("6_xsr7q")
